force-app/main/default/objects/Opportunity/fields/Actividades_a_realizar_en_tiempo_libre__c.field-meta.xml
<CustomField>
    <fullName>Actividades_a_realizar_en_tiempo_libre__c</fullName>
    <label>Frase que describe su estilo de vida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Soltero y practico</fullName>
            </value>
            <value>
                <fullName>Familia con hijos y/o mascotas, centrado en su bienestar y estabilidad</fullName>
            </value>
            <value>
                <fullName>Me gusta disfrutar la vida, viajar y mostrar mi personalidad por medio de mi estilo único</fullName>
            </value>
            <value>
                <fullName>Planifico y son balanceado entre el disfrute y la personalidad</fullName>
            </value>
            <value>
                <fullName>Sé que mis decisiones repercuten en mi entorno, por eso trato de disfrutar la vida mientras no afecte a otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>