force-app/main/default/objects/Opportunity/fields/Adjuntos__c.field-meta.xml
<CustomField>
    <fullName>Adjuntos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adjuntos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>