force-app/main/default/objects/Opportunity/fields/AFOG_FechaAnulacionPedido__c.field-meta.xml
<CustomField>
    <fullName>AFOG_FechaAnulacionPedido__c</fullName>
    <label>Fecha de anulacion de pedido</label>
    <type>DateTime</type>
</CustomField>