force-app/main/default/objects/Opportunity/fields/AFOG_NoLlamadasSeguimientoCompletadas__c.field-meta.xml
<CustomField>
    <fullName>AFOG_NoLlamadasSeguimientoCompletadas__c</fullName>
    <label>No Llamadas Seguimiento Completadas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>