force-app/main/default/objects/Opportunity/fields/AFOG_NoLlamadasSeguimientoProgramadas__c.field-meta.xml
<CustomField>
    <fullName>AFOG_NoLlamadasSeguimientoProgramadas__c</fullName>
    <label>No Llamadas Seguimiento Programadas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>