force-app/main/default/objects/Opportunity/fields/AFOG_PedidoEnviadoUNOE__c.field-meta.xml
<CustomField>
    <fullName>AFOG_PedidoEnviadoUNOE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo se utiliza para hacer un bypass en clase futura y evitar el error de multilples llamados futuros al momento de enviar el pedido a UNO E</description>
    <label>Pedido enviado a UNO E?</label>
    <type>Checkbox</type>
</CustomField>