force-app/main/default/objects/Opportunity/fields/Agencia2__c.field-meta.xml
<CustomField>
    <fullName>Agencia2__c</fullName>
    <formula>Concesionario__r.Codigo_de_agencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agencia</label>
    <type>Text</type>
</CustomField>