force-app/main/default/objects/Opportunity/fields/Alta_probabilidad_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Alta_probabilidad_de_cierre__c</fullName>
    <formula>ISPICKVAL(StageName,&quot;Vendida&quot;) ||   ISPICKVAL(StageName,&quot;PU&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidades ganadas</label>
    <type>Checkbox</type>
</CustomField>