force-app/main/default/objects/Opportunity/fields/AM_Fecha_de_entrega_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_de_entrega_vehiculo__c</fullName>
    <label>Fecha Real de entrega vehiculo</label>
    <type>Date</type>
</CustomField>