force-app/main/default/objects/Opportunity/fields/AM_Fecha_estimada_Factura__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_estimada_Factura__c</fullName>
    <description>Fecha estimada de facturación, cuando se fija la cotización en P4</description>
    <label>Fecha estimada de factura</label>
    <type>Date</type>
</CustomField>