force-app/main/default/objects/Opportunity/fields/AM_N_Propietario__c.field-meta.xml
<CustomField>
    <fullName>AM_N_Propietario__c</fullName>
    <description>Numero de propietarios que ha tenido el vehiculo.</description>
    <label>N° Propietario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#FFFFFF</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#FFFFFF</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FFFFFF</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#FFFFFF</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#FFFFFF</color>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <color>#FFFFFF</color>
                <label>6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>