force-app/main/default/objects/Opportunity/fields/AM_Servicios_adicionales__c.field-meta.xml
<CustomField>
    <fullName>AM_Servicios_adicionales__c</fullName>
    <label>Servicios adicionales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sustituto</fullName>
                <color>#FFFFFF</color>
                <label>Sustituto</label>
            </value>
            <value>
                <fullName>Delivery</fullName>
                <color>#FFFFFF</color>
                <label>Delivery</label>
            </value>
            <value>
                <fullName>Impermeabilización</fullName>
                <color>#FFFFFF</color>
                <label>Impermeabilización</label>
            </value>
            <value>
                <fullName>GPS</fullName>
                <color>#FFFFFF</color>
                <label>GPS</label>
            </value>
            <value>
                <fullName>Kit de seguridad</fullName>
                <color>#FFFFFF</color>
                <label>Kit de seguridad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>