force-app/main/default/objects/Opportunity/fields/Aprobacion_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_Negocio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación Negocio</label>
    <type>Checkbox</type>
</CustomField>