force-app/main/default/objects/Opportunity/fields/AutoNumber2__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber2__c</fullName>
    <displayFormat>HC-{0000000000}</displayFormat>
    <label>AutoNumber2</label>
    <type>AutoNumber</type>
</CustomField>