force-app/main/default/objects/Opportunity/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <description>Campo utilizado por la app de AutoNumber Helper NO BORRAR. Estaba en tamaño 10.</description>
    <label>AutoNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>