force-app/main/default/objects/Opportunity/fields/Avaluado_por_retoma__c.field-meta.xml
<CustomField>
    <fullName>Avaluado_por_retoma__c</fullName>
    <label>Avaluado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>