force-app/main/default/objects/Opportunity/fields/Avaluo_retoma__c.field-meta.xml
<CustomField>
    <fullName>Avaluo_retoma__c</fullName>
    <label>Avalúo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>