force-app/main/default/objects/Opportunity/fields/Averigu_sobre_otras_marcas__c.field-meta.xml
<CustomField>
    <fullName>Averigu_sobre_otras_marcas__c</fullName>
    <label>¿Averiguó sobre otras marcas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>