force-app/main/default/objects/Opportunity/fields/Blindadora__c.field-meta.xml
<CustomField>
    <fullName>Blindadora__c</fullName>
    <label>Blindadora</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehiculo_con_blindaje__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOKS</fullName>
            </value>
            <value>
                <fullName>ARMOR</fullName>
            </value>
            <value>
                <fullName>BLINDEX</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>