force-app/main/default/objects/Opportunity/fields/Bodega_Usados__c.field-meta.xml
<CustomField>
    <fullName>Bodega_Usados__c</fullName>
    <label>Bodega Usados</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Oportunidad__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Bodega_Usados</valueSetName>
    </valueSet>
</CustomField>