force-app/main/default/objects/Opportunity/fields/C_mo_se_enter_de_la_motocicleta__c.field-meta.xml
<CustomField>
    <fullName>C_mo_se_enter_de_la_motocicleta__c</fullName>
    <label>¿Cómo se enteró de la motocicleta?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fuente__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Televisión</fullName>
            </value>
            <value>
                <fullName>Publicidad Exterior</fullName>
            </value>
            <value>
                <fullName>Publicidad Impresa</fullName>
            </value>
            <value>
                <fullName>Teléfono Concesionario</fullName>
            </value>
            <value>
                <fullName>Formulario Motos Sitio web Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Facebook Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Financiación Honda</fullName>
            </value>
            <value>
                <fullName>Agendamiento Posventa</fullName>
            </value>
            <value>
                <fullName>Cliente Posventa</fullName>
            </value>
            <value>
                <fullName>Cliente Cancelado</fullName>
            </value>
            <value>
                <fullName>Formulario Facebook Progreser</fullName>
            </value>
            <value>
                <fullName>Amigo/Familiar</fullName>
            </value>
            <value>
                <fullName>Playa de Ventas</fullName>
            </value>
            <value>
                <fullName>Exhibición Centro Comercial</fullName>
            </value>
            <value>
                <fullName>Feria Local</fullName>
            </value>
            <value>
                <fullName>BTL Fanalca</fullName>
            </value>
            <value>
                <fullName>Toma Empresarial</fullName>
            </value>
            <value>
                <fullName>Comunicación Empresarial</fullName>
            </value>
            <value>
                <fullName>Inbox Facebook</fullName>
            </value>
            <value>
                <fullName>Vitrina Virtual Mercado Libre</fullName>
            </value>
            <value>
                <fullName>Línea SAC Honda</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Chat/ WhatsApp</fullName>
            </value>
            <value>
                <fullName>Formulario Financiación Progreser</fullName>
            </value>
            <value>
                <fullName>Formulario Motos Sitio Web Inbound Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Financiación Progreser</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Facebook Honda</fullName>
            </value>
            <value>
                <fullName>Formulario Reweb Teléfono Honda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>