force-app/main/default/objects/Opportunity/fields/Caja_retoma__c.field-meta.xml
<CustomField>
    <fullName>Caja_retoma__c</fullName>
    <label>Caja retoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>