force-app/main/default/objects/Opportunity/fields/Cambio_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Cambio_de_Pedido__c</fullName>
    <label>Cambio de Pedido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multa tránsito</fullName>
            </value>
            <value>
                <fullName>Incidente técnico</fullName>
            </value>
            <value>
                <fullName>Error en el color - ERP</fullName>
            </value>
            <value>
                <fullName>Error en referencia - ERP</fullName>
            </value>
            <value>
                <fullName>Error en descuento - ERP</fullName>
            </value>
            <value>
                <fullName>Error toma de pedido - ERP</fullName>
            </value>
            <value>
                <fullName>Incumple política de recaudo ERP</fullName>
            </value>
            <value>
                <fullName>Error en condición de pago ERP Cambio de fecha de factura - ERP</fullName>
            </value>
            <value>
                <fullName>Cambio de cliente en la factura - ERP</fullName>
            </value>
            <value>
                <fullName>Cambio de condición de pago - ERP</fullName>
            </value>
            <value>
                <fullName>Cambio de vehículo - ERP</fullName>
            </value>
            <value>
                <fullName>Error en código del asesor - ERP</fullName>
            </value>
            <value>
                <fullName>Inconsistencia en manifiesto - ERP</fullName>
            </value>
            <value>
                <fullName>Vehículo inhabilitado - ERP</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Facturacion electronica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>