force-app/main/default/objects/Opportunity/fields/Celular_FactANomb__c.field-meta.xml
<CustomField>
    <fullName>Celular_FactANomb__c</fullName>
    <formula>IF( Facturar_a_nombre_de__r.RecordType.Name &lt;&gt; &quot;Persona Natural&quot;,  Facturar_a_nombre_de__r.AM_Telefono_representante__c  ,Facturar_a_nombre_de__r.PersonContact.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Celular</label>
    <type>Text</type>
</CustomField>