force-app/main/default/objects/Opportunity/fields/Ciudad_FactANomb__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_FactANomb__c</fullName>
    <formula>Facturar_a_nombre_de__r.AM_Ciudad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciudad</label>
    <type>Text</type>
</CustomField>