force-app/main/default/objects/Opportunity/fields/Cmo_es_su_comportamiento_DISC__c.field-meta.xml
<CustomField>
    <fullName>Cmo_es_su_comportamiento_DISC__c</fullName>
    <label>¿Cómo es su comportamiento? (DISC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dominante</fullName>
            </value>
            <value>
                <fullName>Interactivo</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
            <value>
                <fullName>Cauteloso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>