force-app/main/default/objects/Opportunity/fields/Codigo_Tercero_SAP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Tercero_SAP__c</fullName>
    <label>Código Tercero SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>