force-app/main/default/objects/Opportunity/fields/Codigo_Usuario_SAP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Usuario_SAP__c</fullName>
    <label>Código Usuario SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>