force-app/main/default/objects/Opportunity/fields/Color_retoma__c.field-meta.xml
<CustomField>
    <fullName>Color_retoma__c</fullName>
    <label>Color retoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>