force-app/main/default/objects/Opportunity/fields/Comentario_seguimiento_Gerente__c.field-meta.xml
<CustomField>
    <fullName>Comentario_seguimiento_Gerente__c</fullName>
    <label>Comentario seguimiento Gerente</label>
    <type>TextArea</type>
</CustomField>