force-app/main/default/objects/Opportunity/fields/Como_se_entero_del_vehiculo_o_marca__c.field-meta.xml
<CustomField>
    <fullName>Como_se_entero_del_vehiculo_o_marca__c</fullName>
    <label>Fuente de prospección</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actividades comerciales</fullName>
            </value>
            <value>
                <fullName>Cliente de taller</fullName>
            </value>
            <value>
                <fullName>Medios digitales</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
                <label>Referidos</label>
            </value>
            <value>
                <fullName>Visita corporativa</fullName>
            </value>
            <value>
                <fullName>Medios tradicionales</fullName>
            </value>
            <value>
                <fullName>Bases de Datos de Aliados</fullName>
            </value>
            <value>
                <fullName>Publicidad de vitrina</fullName>
                <label>Publicidad en vitrina</label>
            </value>
            <value>
                <fullName>Vehículo rodando en la calle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>